# overpass-network

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  TODO.md  package-lock.json  package.json
client/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json
client/public/: terms.html
client/src/: App.css  App.tsx  b20.md  blockchain.ts  bocutils.ts  declarations.d.ts  main.tsx  styles.css  transactionFetcher.ts  vite-env.d.ts  wasm-env.d.ts
client/src/bridge/: ITransactionManager.ts  Interfaces.ts  Main.fc  SMTSerialDeserial.ts  close_channel.fc  messageHandler.ts  opAddressBridging.ts  opOpCodes.ts  transfer_funds.fc
client/src/client-op/: tonClient.ts  tonClientV4.ts  tonWebClient.ts
client/src/common/: toastConfig.ts
client/src/components/: AnalyticsReport.tsx  AudioControl.tsx  Balance.tsx  ChannelControls.tsx  ChannelSettingsForm.tsx  CreateChannelForm.tsx  ErrorBoundary.tsx  (+17 more)
config/: alert.yml  cd.yml  ci_cd.yml  ci_pipeline.yaml
contracts_func/: channel_closing_helper.fc  global_merkle_root.fc  global_root_sub.fc  governance_contract.fc  off_chain_jettons.fc  on_chain_intermediate.fc  poseidon_verifier.fc  root.fc  root_helper.fc  sparse_merkle_tree.fc  staking.fc  unilateral_channel.fc  wallet.fc  wallet_extension.fc
contracts_func/import_libs/: MiMcSponge.fc  address.fc  c_signatures.func  channeljetton.fc  constants.fc  consts.fc  curve_constants.func  dict.fc  ec_operations.func  ec_signatures.func  fp.fc  gaslib.func  int.fc  jetton-utils.fc  jetton.fc  math.fc  math.func  mathlib.fc  mathlib2.fc  merkleTreeJetton.fc  message.fc  messages.func  mod_arith.func  msgs.fc  op-codes.fc  openlib.func  params.fc  slices.func  stdlib.fc  stdlib_boc.fc  stdlib_ext.fc  storage.fc  storageJetton.fc  trees.fc  utils.fc  utils.func
devdocs/: DOC1.md  DOC2.md  DOC3.md  LEARNINGMOD1.md
overpass-rs/: CONTRIBUTING.md  Cargo.toml  blueprint.md  setup_backend.sh  setup_client.sh
overpass-rs/benches/: zkp_benchmarks.rs
overpass-rs/src/: lib.rs  main.rs
ovp_client_node/client/: index.html  manifest.json  package-lock.json  tsconfig.json  tsconfig.node.json  vite.config.ts
ovp_client_node/ovp-client-rust/: Cargo.toml  README.md
ovp_client_node/ovp-client-rust /: Cargo.toml  README.md
ovp_client_node/ovp-client-rust /src/: lib.rs
ovp_client_node/ovp-client-rust /src/bitcoin/: client.rs  mod.rs  rpc_client.rs  scripts.rs  transactions.rs  wallet.rs
ovp_client_node/ovp-client-rust /src/common/: mod.rs
ovp_client_node/ovp-client-rust /src/common/error/: client_errors.rs
ovp_client_node/ovp-client-rust /src/common/types/: dag_boc.rs  mod.rs  state_boc.rs
ovp_client_node/ovp-client-rust /src/contract/: mod.rs
ovp_client_node/ovp-client-rust /src/core/: mod.rs
ovp_client_node/ovp-client-rust /src/core/client/channel/: channel_contract.rs
ovp_client_node/ovp-client-rust /src/core/client/transaction/: transaction_manager.rs  transaction_oc_data.rs  transaction_types.rs
ovp_client_node/ovp-client-rust /src/core/client/wallet_extension/: channel_manager.rs  grouping.rs  token_oc_data.rs  user.rs  wallet_extension_contract.rs  wallet_extension_types.rs
ovp_client_node/ovp-client-rust /src/core/client/wallet_extension/bitcoin_b2o/: bitcoin_state_converter.rs
ovp_client_node/ovp-client-rust /src/core/conversion/: mod.rs
ovp_client_node/ovp-client-rust /src/core/state/: sparse_merkle_tree_wasm.rs  state_manager.rs  state_oc_data.rs
ovp_client_node/ovp-client-rust /src/core/validation/: client_validation.rs  mod.rs
ovp_client_node/ovp-client-rust /src/core/zkps/: circuit_builder.rs  plonky2.rs  proof.rs  zkp.rs
ovp_client_node/ovp-client-rust /src/network/: api.rs  bitcoin_cs.rs  client_side.rs  mod.rs  peer.rs  privacy_handler.rs  server.rs
ovp_client_node/ovp-client-rust /src/privacy/: mod.rs
ovp_client_node/ovp-client-rust /src/wasm/: bindings_wasm.rs  conversion_wasm.rs  runtime_wasm.rs  types_wasm.rs
ovp_client_node/ovp-client-rust/src/: lib.rs
ovp_client_node/ovp-client-rust/src/bitcoin/: bitcoin_types.rs  client.rs  mod.rs  rpc_client.rs  scripts.rs  transactions.rs  wallet.rs  zkp_handler.rs
ovp_client_node/ovp-client-rust/src/common/: mod.rs  utils.rs
ovp_client_node/ovp-client-rust/src/common/error/: client_errors.rs
ovp_client_node/ovp-client-rust/src/common/logging/: config.rs  formatters.rs  logger.rs  mod.rs
ovp_client_node/ovp-client-rust/src/common/types/: builder.rs  dag_boc.rs  state_boc.rs
ovp_client_node/ovp-client-rust/src/contract/: contract_deployer.rs  contract_manager.rs  contract_types.rs
ovp_client_node/ovp-client-rust/src/core/client/: mod.rs
ovp_client_node/ovp-client-rust/src/core/client/channel/: channel_contract.rs
ovp_client_node/ovp-client-rust/src/core/client/transaction/: mod.rs  transaction_manager.rs  transaction_oc_data.rs  transaction_types.rs
ovp_client_node/ovp-client-rust/src/core/client/wallet_extension/: channel_manager.rs  client_proof_exporter.rs  mod.rs  token_oc_data.rs  token_wallet.rs  user.rs  wallet_extension_contract.rs  wallet_extension_types.rs  wallet_utils.rs  zkp_transaction.rs
ovp_client_node/ovp-client-rust/src/core/client/wallet_extension/bitcoin_b2o/: b.txt  bitcoin_state_converter.rs  blueprint.md  mod.rs
ovp_client_node/ovp-client-rust/src/core/conversion/: conversion_client.rs
ovp_client_node/ovp-client-rust/src/core/state/: mod.rs  sparse_merkle_tree_wasm.rs  state_manager.rs  state_types.rs
ovp_client_node/ovp-client-rust/src/core/zkps/: circuit_builder.rs  mod.rs  plonky2.rs  proof.rs  zkp.rs  zkp_interface.rs
ovp_client_node/ovp-client-rust/src/network/: api.rs  bitcoin_cs.rs  client_side.rs  peer.rs  privacy_handler.rs  server.rs  traits.rs
ovp_client_node/ovp-client-rust/src/privacy/: private.rs
ovp_client_node/ovp-client-rust/src/wasm/: bindings_wasm.rs  conversion_wasm.rs  mod.rs  runtime_wasm.rs  types_wasm.rs
ovp_client_node/ovp-client-rust/tests/common/: mod.rs
ovp_client_node/ovp-client-rust/tests/integration/: mod.rs
scripts/: build.sh  deploy.sh  deploy_channels.sh  submit_merkle_root.sh  test.sh
(+260 files in other folders)
