[package]
name = "ovp-client"
version = "0.1.0"
edition = "2021"
description = "OVP Client Implementation"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core Dependencies
anyhow = "1.0.75"
url = "2.4.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.11.5"
hex = "0.4.3"
sha2 = "0.10.8"
base64 = "0.22.1"
toml = "0.8.19"
thiserror = "1.0.50"
chrono = { version = "0.4.31", features = ["serde", "wasmbind"] }
uuid = { version = "1.6.1", features = ["v4", "serde", "js"] }
itertools = "0.12.0"
num-derive = "0.4.1"
num-traits = "0.2.17"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }

# Bitcoin-related Dependencies
bitcoin_hashes = { version = "0.13.0", features = ["serde"] }
bitcoin = { version = "0.30.1", features = ["rand", "serde"] }
bitcoincore-rpc = "0.17.0"
bip39 = "2.0.0"
bitcoin_hd = "0.10.2"
bip32 = "0.5.1"
base58check = { version = "0.1.0", default-features = false }
bech32 = "0.9.1"
secp256k1 = { version = "0.27.0", features = ["serde", "rand-std"] }
chacha20poly1305 = "0.10.1"

# Plonky2 Dependencies
plonky2 = { git = "https://github.com/mir-protocol/plonky2", branch = "main", features = ["parallel"] }
plonky2_field = { git = "https://github.com/mir-protocol/plonky2", package = "plonky2_field", branch = "main" }
plonky2_maybe_rayon = "0.1"

# WASM and Browser Dependencies
wasm-bindgen = { version = "0.2.89", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.39"
js-sys = "0.3.66"
web-sys = { version = "0.3.66", features = [
    "Window", 
    "Storage", 
    "Performance", 
    "console", 
    "WebSocket", 
    "MessageEvent", 
    "Url", 
    "Blob",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "DomTokenList",
    "CssStyleDeclaration",
    "History",
    "Location",
    "Headers",
    "Request",
    "RequestInit",
    "RequestMode",
    "Response",
    "Crypto",
    "SubtleCrypto"
] }
console_error_panic_hook = "0.1.7"
wasm-bindgen-test = "0.3.39"
getrandom = { version = "0.2.11", features = ["js", "wasm-bindgen"] }

# Crypto Dependencies
aes-gcm = "0.10.3"
ed25519-dalek = { version = "2.1.0", features = ["hazmat", "rand_core", "serde"] }
x25519-dalek = "2.0.0"
curve25519-dalek = { version = "4.1.1", features = ["rand_core"] }
rand = { version = "0.8.5", features = ["getrandom", "std_rng"] }
blake2 = "0.10.6"
subtle = "2.5.0"

# Async and Network
futures = "0.3.29"
async-trait = "0.1.74"
reqwest = { version = "0.11.22", features = ["json", "rustls-tls"], default-features = false }

# Encoding and Utils
bincode = "1.3.3"
serde_derive = "1.0.192"
zeroize = { version = "1.7.0", features = ["zeroize_derive"] }
lazy_static = "1.4.0"
parking_lot = { version = "0.12.1", features = ["nightly"] }
array-init = "2.1.0"
metrics = "0.21.1"
lru_time_cache = "0.11.11"
crc = "3.0.1"
num_cpus = "1.16.0"
colored = "2.0.4"
rayon = { version = "1.8.0", optional = true }
termcolor = "1.4.0"
serde_arrays = "0.1.0"
serde-wasm-bindgen = "0.6.1"
derive_more = { version = "1.0.0-beta.6", features = ["full"] }
smallvec = { version = "1.11.2", features = ["const_new", "union", "write", "serde"] }
merkle = "1.11.0"
strum = "0.26.3"
strum_macros = "0.26.4"


# Logging and Tracing
tracing = "0.1.40"
tracing-wasm = "0.2.1"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
criterion = "0.5.1"
wasm-bindgen-test = "0.3.39"

[features]
default = ["wasm"]
wasm = []
native = ["rayon"]

[[bench]]
name = "benchmarks"
harness = false
path = "benches/benchmarks.rs"
test = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
debug = false

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O4", "--enable-mutable-globals", "--enable-bulk-memory"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["."]